add form, label and inputs

--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
     <img src="image/hennessy.jfif" alt="">
     <img src="image/soft_drink.jfif" alt="">
 
+    <h1 class="subscribe">Subscribe to our kitchen newsletter</h1>
+
+    <form action="">
+        <label for="user">Username</label>
+        <input type="text" name="" id="user"><br><br>
+        <label for="email">Email</label>
+        <input type="email" name="" id="email"><br><br>
+        <label for="number">Phone No.</label>
+        <input type="number" name="" id="number"><br><br>
+        <label for="password">Password</label>
+        <input type="password" name="" id="password"><br><br>
+        <input type="button" value="Submit">
+    </form>
+
+
+    <script src="index.js"></script>
+
     <br><br><br><br><br><br>
 </body>
 </html>
