add director section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karim kitchen</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
     <h1>heading one</h1>
@@ -79,9 +78,29 @@
         <input type="button" value="Submit">
     </form>
 
+    <!-- The CSS Box Model and the Div Elemment  -->
 
-    <script src="index.js"></script>
+    <!-- The html box model is a system that makes every html element a box. Inside the box we can add 
+    padding and margin.
+    Padding: Padding means inside space which an element gives its contents
+    Margin: Margin is outside space which an element gives between itself and the 
+    neighboring elements -->
 
+    <p class="par1">This is a paragraph</p>
+
+    <p class="par2">This is a paragraph</p>
+
+    <p class="par3">This is a paragraph</p>
+
+    <div class="director ">
+        <div class="dir-text">
+            <h1>Meet the Director of Karim Kitchen</h1>
+            <p>I am abdkarim the Director of Karim kitchen black guy cool guy who want
+                people to eat some qality food.
+            </p>
+        </div>
+        <img src="image/blacky.jpg" alt="">
+    </div>
     <br><br><br><br><br><br>
 </body>
 </html>
