--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <h1>heading one</h1>
-    <h2>heading two</h2>
-    <h3>heading three</h3>
-    <h4>heading four</h4>
-    <h5>heading five</h5>
-    <h6>heading six</h6>
-    
-    <p>paragraph</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos qui maiores molestiae, quia mollitia unde, voluptates ipsam amet autem labore molestias vero. Consequatur rem ab, nam tempora possimus debitis vitae?</p>
 
     <h1>welcome to karim kitchen</h1>
 
@@ -79,7 +70,7 @@
 
     <!-- The CSS Box Model and the Div Elemment  -->
 
-    <!-- The html box model is a system that makes every html element a box. Inside the box we can add 
+    <!-- The htmbox model is a system that makes every html element a box. Inside the box we can add 
     padding and margin.
     Padding: Padding means inside space which an element gives its contents
     Margin: Margin is outside space which an element gives between itself and the 
