--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>welcome to karim kitchen</h1>
+    <h1>welcome to <span>Karim kitchen</span></h1>
 
     <h2>you can now order from karim kitchen</h2>
     <ol>
