--- a/buffet.html
+++ b/buffet.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/ca689f849f.js"
       crossorigin="anonymous"
     ></script>
-    <title>Tasty Fries</title>
+    <title>Karim Kitchen</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
         <input type="checkbox" id="check" />
         <div class="logo">
           <img src="images/logo.jpeg" alt="" />
-          <h1>Tasty Fries</h1>
+          <h1>Karim Kitchen</h1>
         </div>
         <div class="links">
           <a href="/">HOME</a>
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <main>
-      <h1>Welcome to <span>Tasty Fries</span></h1>
+      <h1>Welcome to <span>Karim Kitchen</span></h1>
       <h2>You can now order from our choice meals</h2>
 
       <ol>
@@ -106,7 +106,7 @@
       </div>
     </div>
     <footer>
-      <p>&copy; Copyright 2025 Tasty Fries</p>
+      <p>&copy; Copyright 2025 Karim Kitchen</p>
     </footer>
 
     <script src="index.js"></script>
